--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block title%}Home Page{% endblock %}
 {% block content %}
-<h1>First page</h1>
+<div class="alert alert-warning" role="alert">
+    Welcome!
+  </div>
+
+  <a href="{{ url_for('login') }}" class="btn btn-dark">Log in</a>
+
+
 {% endblock %}
