--- a/templates/login.html
+++ b/templates/login.html
@@ -7,4 +7,9 @@
     <p><input type="text" name="nm"/></p>
     <p><input type="submit" value="submit"/></p>
 </form>
+{% if error %}
+<script>
+    window.alert("{{error}}");
+</script>
+{% endif %}
 {% endblock %}
