add home page where user is redirected after logged in

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,6 @@
 <div class="alert alert-warning" role="alert">
     Welcome!
   </div>
-
-  <a href="{{ url_for('login') }}" class="btn btn-dark">Log in</a>
-
+  <a id = "login" href="{{ url_for('login') }}" class="btn btn-dark">Log in</a>
 
 {% endblock %}
