--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,7 @@
 {% block content %}
 <form action="#" method="post">
     <p>Name:</p>
-    <p><input type="text" name="nm"/></p>
+    <p><input type="text" name="nm" placeholder="Enter your name" required/></p>
     <p><input type="submit" value="submit"/></p>
 </form>
-{% if error %}
-<script>
-    window.alert("{{error}}");
-</script>
-{% endif %}
 {% endblock %}
