--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block title%}Home Page{% endblock %}
 {% block content %}
+
 <div class="alert alert-warning" role="alert">
     Welcome!
   </div>
-  <a id = "login" href="{{ url_for('login') }}" class="btn btn-dark">Log in</a>
+  <div style="margin: 30px">
+    <a id = "login" href="{{ url_for('login') }}" class="btn btn-dark">Log in</a>
+  </div>
 
 {% endblock %}
