--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,11 @@
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
+<div style="margin: 30px;">
 <form action="#" method="post">
     <p>Name:</p>
     <p><input type="text" name="nm" placeholder="Enter your name" required/></p>
     <p><input type="submit" value="submit"/></p>
 </form>
+</div>
 {% endblock %}
