--- a/templates/user.html
+++ b/templates/user.html
@@ -1,30 +1,33 @@
-{% extends "base.html" %}
- {% block title %}Login Page{% endblock %}
-  {% block login %}
-<p>Hello, {{ usr }}</p>
+{% extends "base.html" %} {% block title %}Login Page{% endblock %} {% block
+login %}
+
+
 <script>
-    function LogOut() {
-
-              fetch('{{ url_for('logout')}}', {
-                  method: 'GET',
-              }).then(response => {
-                  if (response.ok) {
-
-                      window.location.href = '{{ url_for('home') }}';
-                  } else {
-                      console.error('Logout failed');
-                  }
-              }).catch(error => {
-                  console.error('Error during logout:', error);
-              });
-          }
 
 
-              function GoHome() {
+function logout() {
+    fetch('{{ url_for('logout') }}', {
+        method: 'GET',
+    }).then(response => {
+        if (response.ok) {
+            window.location.href = '{{ url_for('home') }}';
+        } else {
+            console.error('Logout failed');
+        }
+    }).catch(error => {
+        console.error('Error during logout:', error);
+    });
+}
+
+
+
+  function GoHome() {
       window.location.href = '{{ url_for('hp')}}';
   }
 </script>
-
-<button type="button" class="btn btn-dark" onClick="LogOut()">Log out</button>
+<div style="margin: 30px;">
+  <p>Hello, {{ usr }}</p>
+<button type="button" class="btn btn-dark" onclick="logout()">Log out</button>
 <button type="button" class="btn btn-dark" onclick="GoHome()">Home page</button>
+</div>
 {% endblock %}
